Disabled hover on mobile and fixed password icon size

--- a/src/app/components/ui-kit/button/button.css
+++ b/src/app/components/ui-kit/button/button.css
@@ -78,3 +78,11 @@
     font-size: 16px;
   }
 }
+
+@media (max-width: 768px) {
+  .button {
+    &:hover {
+      background: var(--button-bg-color);
+    }
+  }
+}
